--- a/momkenpay.html
+++ b/momkenpay.html
@@ -221,7 +221,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
       <div class="container-fluid p-100">
         <div class="row ">
        <!-- payment-invoicing Item 1 -->
-       <div class="col-md-6 payment-Einvoicing  mb-4">
+       <div class="col-md-4 payment-Einvoicing  mb-4">
         <div class="payment-invoicing">
           <a href="your_link_here">
             <img src="assets/images/momksol-img.png" data-aos="fade-up" data-aos-duration="800" alt="News 1" class="img-fluid payment-Einvoicing-img" data-aos="fade-up" data-aos-duration="600">
@@ -242,7 +242,79 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 
   <!-- payment-invoicing item 2 -->
-  <div class="col-md-6 payment-Einvoicing  mb-4">
+  <div class="col-md-4 payment-Einvoicing  mb-4">
+    <div class="payment-invoicing">
+      <a href="your_link_here">
+        <img src="assets/images/momksol-right.png" data-aos="fade-up" data-aos-duration="800" alt="News 1" class="img-fluid payment-Einvoicing-img" data-aos="fade-up" data-aos-duration="600">
+    </a>        
+    </div>
+    <div class="payment-invoicing-text">
+      <h3 data-aos="fade-up" data-aos-duration="1000">E-Invoicing </h3>
+      <p data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur. Quis viverra faucibus eu malesuada porta et. Felis placerat consectetur nunc vel laoreet fringilla ultricies. Mauris. </p>
+         <div class="d-flex justify-content-start " data-aos="fade-up" data-aos-duration="1000">
+            <a href="#" class="get-startgov-btn mb-3"style="margin-top: 25px;">Get Started <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.58398 7.9987H14.4173M14.4173 7.9987L8.00065 1.58203M14.4173 7.9987L8.00065 14.4154" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></a>
+          </div>
+    </div>
+  </div>
+  
+  <!-- payment-invoicing item 2 -->
+  <div class="col-md-4 payment-Einvoicing  mb-4">
+    <div class="payment-invoicing">
+      <a href="your_link_here">
+        <img src="assets/images/momksol-right.png" data-aos="fade-up" data-aos-duration="800" alt="News 1" class="img-fluid payment-Einvoicing-img" data-aos="fade-up" data-aos-duration="600">
+    </a>        
+    </div>
+    <div class="payment-invoicing-text">
+      <h3 data-aos="fade-up" data-aos-duration="1000">E-Invoicing payment-invoicing-textpayment-invoicing-textpayment-invoicing-text flex-wrap: wrap; flex-wrap: wrap; flex-wrap: wrap; </h3>
+      <p data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur. Quis viverra faucibus eu malesuada porta et. Felis placerat consectetur nunc vel laoreet fringilla ultricies. Mauris. </p>
+         <div class="d-flex justify-content-start " data-aos="fade-up" data-aos-duration="1000">
+            <a href="#" class="get-startgov-btn mb-3"style="margin-top: 25px;">Get Started <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.58398 7.9987H14.4173M14.4173 7.9987L8.00065 1.58203M14.4173 7.9987L8.00065 14.4154" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></a>
+          </div>
+    </div>
+  </div>
+  
+  <!-- payment-invoicing item 2 -->
+  <div class="col-md-4 payment-Einvoicing  mb-4">
+    <div class="payment-invoicing">
+      <a href="your_link_here">
+        <img src="assets/images/momksol-right.png" data-aos="fade-up" data-aos-duration="800" alt="News 1" class="img-fluid payment-Einvoicing-img" data-aos="fade-up" data-aos-duration="600">
+    </a>        
+    </div>
+    <div class="payment-invoicing-text">
+      <h3 data-aos="fade-up" data-aos-duration="1000">E-Invoicing </h3>
+      <p data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur. Quis viverra faucibus eu malesuada porta et. Felis placerat consectetur nunc vel laoreet fringilla ultricies. Mauris. </p>
+         <div class="d-flex justify-content-start " data-aos="fade-up" data-aos-duration="1000">
+            <a href="#" class="get-startgov-btn mb-3"style="margin-top: 25px;">Get Started <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.58398 7.9987H14.4173M14.4173 7.9987L8.00065 1.58203M14.4173 7.9987L8.00065 14.4154" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></a>
+          </div>
+    </div>
+  </div>
+  
+  <!-- payment-invoicing item 2 -->
+  <div class="col-md-4 payment-Einvoicing  mb-4">
+    <div class="payment-invoicing">
+      <a href="your_link_here">
+        <img src="assets/images/momksol-right.png" data-aos="fade-up" data-aos-duration="800" alt="News 1" class="img-fluid payment-Einvoicing-img" data-aos="fade-up" data-aos-duration="600">
+    </a>        
+    </div>
+    <div class="payment-invoicing-text">
+      <h3 data-aos="fade-up" data-aos-duration="1000">E-Invoicing </h3>
+      <p data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur. Quis viverra faucibus eu malesuada porta et. Felis placerat consectetur nunc vel laoreet fringilla ultricies. Mauris. </p>
+         <div class="d-flex justify-content-start " data-aos="fade-up" data-aos-duration="1000">
+            <a href="#" class="get-startgov-btn mb-3"style="margin-top: 25px;">Get Started <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.58398 7.9987H14.4173M14.4173 7.9987L8.00065 1.58203M14.4173 7.9987L8.00065 14.4154" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></a>
+          </div>
+    </div>
+  </div>
+  
+  <!-- payment-invoicing item 2 -->
+  <div class="col-md-4 payment-Einvoicing  mb-4">
     <div class="payment-invoicing">
       <a href="your_link_here">
         <img src="assets/images/momksol-right.png" data-aos="fade-up" data-aos-duration="800" alt="News 1" class="img-fluid payment-Einvoicing-img" data-aos="fade-up" data-aos-duration="600">
