--- a/momkenpay.html
+++ b/momkenpay.html
@@ -267,7 +267,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     </a>        
     </div>
     <div class="payment-invoicing-text">
-      <h3 data-aos="fade-up" data-aos-duration="1000">E-Invoicing payment-invoicing-textpayment-invoicing-textpayment-invoicing-text flex-wrap: wrap; flex-wrap: wrap; flex-wrap: wrap; </h3>
+      <h3 data-aos="fade-up" data-aos-duration="1000">E-Invoicing  </h3>
       <p data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur. Quis viverra faucibus eu malesuada porta et. Felis placerat consectetur nunc vel laoreet fringilla ultricies. Mauris. </p>
          <div class="d-flex justify-content-start " data-aos="fade-up" data-aos-duration="1000">
             <a href="#" class="get-startgov-btn mb-3"style="margin-top: 25px;">Get Started <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
